--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
             <div class="container">
                 <h1 class="display-4 text-center">Train Schedule</h1>
 
+                <h3>Current Time</h3>
+                <div id="clock" class="clock">loading ...</div>
             </div>
         </div>
     </div>
@@ -69,7 +71,7 @@
                     </div>
                     <div class="form-group">
                         <label for="formGroupExampleInput">First Train Time (HH:mm - Military Time)</label>
-                        <input type="text" class="form-control firstTime" id="formGroupExampleInput" placeholder="First Train TIme">
+                        <input type="text" class="form-control start" id="formGroupExampleInput" placeholder="First Train TIme">
                     </div>
                     <div class="form-group">
                         <label for="formGroupExampleInput2">Frequency (Min.)</label>
